styles/indexpage.css
@import url(register.css);

:root {
	--red-bg-color-transparent: #eb5757d0;
	--white-bg-color-transparent: rgba(221, 221, 221, 0.829);
}

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

/* .index {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    z-index: 1;
} */

.content-wrapper__background-container {
	height: 100%;
	width: 100%;
	background-image: url('../assets/hero/hero-a-blur.jpg');
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	position: absolute;
	z-index: -1;
	background-color: red;
}

.content-wrapper__heading {
	font-weight: 600;
	font-size: 2rem;
	font-family: 'Rowdies', sans-serif;
	color: rgb(255, 255, 255);
	margin: 3.5rem 1rem 0rem 1rem;
	text-align: center;
	letter-spacing: 0.5rem;

	margin-bottom: 8rem;
	background-color: rgba(29, 29, 29, 0.349);
	border-radius: 0.3rem;
	padding: 2.8rem;
	display: flex;
}

.content-wrapper__intro-content {
	height: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 2rem;
}

.content-wrapper__logo {
	margin-top: 7rem;
	/* margin-bottom: 1rem;
    margin-top: 6rem; */
	height: 10rem;
}

.content-wrapper__btn {
	width: 21rem;
	padding: 1.2rem;
	font-weight: 600;
	font-size: 2rem;
	font-family: 'Fira Sans', sans-serif;
	border-radius: 0.3rem;
	border-style: none;
	color: var(--weakblack-text-color);
	background-color: rgba(255, 255, 255, 0.75);
	box-shadow: 0px 0px 20px 0px #2e2e2e;
	position: relative;
	bottom: 2rem;
}

.content-wrapper__info-section {
	display: flex;
	flex-direction: column;
	background-color: rgba(70, 70, 70, 0.856);
	color: var(--white-text-color);
	border-radius: 4px;
	margin-bottom: 2rem;
	padding: 1rem;
	gap: 0.5rem;
	text-align: center;
	letter-spacing: 0.1ch;
	word-spacing: 0.2ch;
	box-shadow: 0px 0px 20px 0px #2e2e2e;
	width: 21rem;
}

.info-section__subtitle {
	margin-top: 1rem;
	font-size: 1rem;
}

.info-section__text {
	font-weight: 200;
	font-size: 1rem;
}

.info-section__text--strong {
	color: rgb(255, 106, 106);
}

.content-wrapper__info-section {
	display: flex;
	flex-direction: column;
	background-color: rgba(70, 70, 70, 0.856);
	color: var(--white-text-color);
	border-radius: 4px;
	margin-bottom: 2rem;
	padding: 1rem;
	gap: 0.5rem;
	text-align: center;
	letter-spacing: 0.1ch;
	word-spacing: 0.2ch;
	box-shadow: 0px 0px 20px 0px #2e2e2e;
	width: 21rem;
}

.info-section__subtitle {
	margin-top: 1rem;
	font-size: 1rem;
}

.info-section__text {
	font-weight: 200;
	font-size: 1rem;
}

.info-section__text--strong {
	color: rgb(255, 106, 106);
}

/* LOGIN FORM "page" STYLING */
.content-wrapper__login-container {
	min-width: 100%;
	margin: 8rem 0rem 4rem 0rem;
	display: flex;
	flex-direction: column;
	text-align: center;
	padding: 0.5rem;
	background-color: var(--white-bg-color-transparent);
	border-radius: 0.3rem;
}

.content-wrapper__heading-login {
	font-size: 2rem;
	margin-top: 1.5rem;
}

.content-wrapper__input-section {
	text-align: left;
	padding: 1rem;
}

.content-wrapper__name-heading {
	margin-bottom: 0.3rem;
	margin-top: 0.5rem;
}

.content-wrapper__name-field {
	border-style: none;
	border-radius: 0.3rem;
	padding: 1.2rem;
	width: 100%;
}

.content-wrapper__password-heading {
	margin-bottom: 0.3rem;
	margin-top: 2rem;
}

.content-wrapper__password-field {
	border-style: none;
	border-radius: 0.3rem;
	padding: 1.2rem;
	width: 100%;
	margin-bottom: 2.5rem;
}

.content-wrapper__btn--red {
	background-color: var(--red-bg-color-transparent);
	color: white;
}

.content-wrapper__back-btn {
	display: flex;

	min-width: 100%;
	border-style: none;
	border-radius: 0.3rem;
	padding: 0.4rem 1rem 0.4rem 0rem;
	opacity: 0.8;
}

.content-wrapper__back-btn-icon {
	display: flex;
	justify-items: flex-end;
	rotate: 180deg;
	margin-left: 1rem;
	height: 35px;
	width: 35px;
}
/* fiks sånn at margin-top ikke gjør at bildet blir større, siste knappen skal ligge nederst */

/* If-logged-in welcome-msg */
.content-wrapper__welcome-msg {
	font-size: 3.2rem;
	padding: 2rem;
	margin: 2rem;
	border-radius: 0.3rem;
	text-align: center;
	color: white;
	letter-spacing: 0.1rem;
	background-color: var(--white-bg-color-transparent);
}

.content-wrapper__welcome-msg-wrapper {
	display: flex;
	flex-direction: column;
	justify-content: center;
	height: 100vh;
	width: 100vw;
	background-image: url(/assets/bg-images/leafbg.svg);
	background-color: var(--light-green-bg-color);
}

.content-wrapper__error-msg {
	color: red;
	font-weight: bold;
}

